; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_45418.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_45418.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"\0AStub Length: %d\0A\00", align 1
@stub = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"Shellcode Length: %d\0A\0A\00", align 1
@shellcode = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [19 x i8] c"Total Length: %d\0A\0A\00", align 1
@code = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32 (...)*, align 8
  %2 = load i32, i32* @stub, align 4
  %3 = call i64 @strlen(i32 %2)
  %4 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %3)
  %5 = load i32, i32* @shellcode, align 4
  %6 = call i64 @strlen(i32 %5)
  %7 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i64 %6)
  %8 = load i32, i32* @stub, align 4
  %9 = call i64 @strlen(i32 %8)
  %10 = load i32, i32* @shellcode, align 4
  %11 = call i64 @strlen(i32 %10)
  %12 = add i64 %9, %11
  %13 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i64 %12)
  %14 = load i32, i32* @stub, align 4
  %15 = call i64 @strlen(i32 %14)
  %16 = load i32, i32* @shellcode, align 4
  %17 = call i64 @strlen(i32 %16)
  %18 = add i64 %15, %17
  %19 = call i32* @malloc(i64 %18)
  store i32* %19, i32** @code, align 8
  %20 = load i32*, i32** @code, align 8
  %21 = load i32, i32* @stub, align 4
  %22 = load i32, i32* @stub, align 4
  %23 = call i64 @strlen(i32 %22)
  %24 = call i32 @memcpy(i32* %20, i32 %21, i64 %23)
  %25 = load i32*, i32** @code, align 8
  %26 = load i32, i32* @stub, align 4
  %27 = call i64 @strlen(i32 %26)
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* @shellcode, align 4
  %30 = load i32, i32* @shellcode, align 4
  %31 = call i64 @strlen(i32 %30)
  %32 = call i32 @memcpy(i32* %28, i32 %29, i64 %31)
  %33 = load i32*, i32** @code, align 8
  %34 = bitcast i32* %33 to i32 (...)*
  store i32 (...)* %34, i32 (...)** %1, align 8
  %35 = load i32 (...)*, i32 (...)** %1, align 8
  %36 = call i32 (...) %35()
  ret i32 0
}

declare dso_local i32 @printf(i8*, i64) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32* @malloc(i64) #1

declare dso_local i32 @memcpy(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
